<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/btn_scrollview_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/btn_txt_scrollview_vertical"/>
        <Button
            android:id="@+id/btn_scrollview_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/btn_txt_scrollview_horizontal"/>
        <Button
            android:id="@+id/btn_android_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/btn_txt_android_button"/>
        <Button
            android:id="@+id/btn_android_image_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/btn_txt_android_imagebutton"/>
        <Button
            android:id="@+id/btn_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/btn_txt_edittext"/>
        <Button
            android:id="@+id/btn_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/btn_txt_checkbox"/>
        <Button
            android:id="@+id/btn_radio_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/btn_txt_radio_button"/>
        <Button
            android:id="@+id/btn_switch_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/btn_txt_switch_button"/>
        <Button
            android:id="@+id/btn_toggle_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/btn_txt_toggle_button"/>
        <Button
            android:id="@+id/btn_rating_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/btn_txt_rating_bar"/>
        <Button
            android:id="@+id/btn_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/btn_txt_spinner"/>
        <Button
            android:id="@+id/btn_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/btn_txt_progress_bar"/>
        <Button
            android:id="@+id/btn_date_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/btn_txt_date_picker"/>
        <Button
            android:id="@+id/btn_time_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/btn_txt_time_picker"/>
        <Button
            android:id="@+id/btn_fab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/btn_txt_floating_action_button"/>
        <Button
            android:id="@+id/btn_floating_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/btn_txt_floating_labels"/>
        <Button
            android:id="@+id/btn_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/btn_txt_seekbar"/>
        <Button
            android:id="@+id/btn_simple_alert_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/btn_txt_simple_alert_dialog"/>
        <Button
            android:id="@+id/btn_custom_alert_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/btn_txt_custom_alert_dialog"/>
        <Button
            android:id="@+id/btn_snackbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/btn_txt_snackbar"/>
        <Button
            android:id="@+id/btn_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/btn_txt_notification"/>
        <Button
            android:id="@+id/btn_image_switcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/btn_txt_imageswitcher"/>
        <Button
            android:id="@+id/btn_video_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/btn_txt_videoview"/>
        <Button
            android:id="@+id/btn_web_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/btn_txt_webview"/>
        <Button
            android:id="@+id/btn_search_view_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/btn_txt_searchviewactivity"/>
        <Button
            android:id="@+id/btn_calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/btn_txt_calendar_view"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>
